freest/test/prog/invalid/scoping/MultipleDeclsConsAcross/MultipleDeclsConsAcross.fst
module MultipleDeclsConsAcross where

data Foo = Bar Int | Baz

data Boo = Far Int | Baz
